5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1573_2896.log
== TEST (2019-03-13 14:16:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Lana Del Rey")

# Impressao de saidas
print("Lana Del Rey")
-- OUTPUT:
Lana Del Rey
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Lana Del Rey")

# Impressao de saidas
print("Lana Del Rey")
-- EXECUTION TIME:
0.223923
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Lana Del Rey
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Lana Del Rey
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Lana Del Rey")

# Impressao de saidas: print(var)
print("Lana Del Rey")
-- EXECUTION TIME:
0.230128
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Lana Del Rey
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Lana Del Rey
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:18:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Digte o nome: "Lana Del Rey")

# Impressao de saidas: print(var)
print("Lana Del Rey")
-- EXECUTION TIME:
0.127791
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input(Digte o nome: "Lana Del Rey")
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:19:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Lana Del Rey")

# Impressao de saidas: print(var)
print(var)
-- EXECUTION TIME:
0.170475
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:35:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Lana Del Rey")

# Impressao de saidas: print(var)
print(var)
-- EXECUTION TIME:
0.11824
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 20:20:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Arctic Monkeys")

# Impressao de saidas: print(var)
print(var)
-- EXECUTION TIME:
0.144114
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
